2008-06-20  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail/tny-cached-file-stream.c:
	Linked the reset implementation to the stream interface.

	* libtinymail/tny-cached-file.c:
	Create the files synchronously, to avoid accessing the file from other
	thread if this has not been created yet.

	* Changelog: removed many end-of-line whitespaces.

2008-06-18  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail/tny-shared.h:
        Added stream cache classes and handlers

	* libtinymail/tny-stream-cache.[ch]:
        Interface for streams caches. It's mostly intended for image
        remote streams.

	* libtinymail/tny-fs-stream-cache.[ch]:
        Implementation of TnyStreamCache interface using a local
        folder for storage. This implementation tries to keep the
        size of the cached streams lower than 1 MB.

	* libtinymail/tny-cached-file.[ch]:
        Data object to store status information of currently cached
        files. It also controls the process of fetching the remote
        streams, and creation of streams reading from cache.

	* libtinymail/tny-cached-file-stream.[ch]:
        Streams wrapping TnyFsStream, that access the cache files
        waiting when they're not completely fetched yet.

	* libtinymail/Makefile.am:
        Added stream cache implementation files.

2008-06-10  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	Added the proper error domain do some errors

2008-06-09  Rob Taylor  <rob.taylor@codethink.co.uk>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
	Some mail servers use a namespace for their inbox, but inbox
	is also a top-level folder. This special-cases it so we get the
	flags of INBOX and also do the rest of our INBOX special casing.

2008-06-05  Mark Doffman  <mark.doffman@codethink.co.uk>

	* bindings/python/*
	Update .override and .defs files to reflect changes
	in tinymail interfaces.

	* tests/python-demo/*