@@ -774,13 +774,13 @@ _tny_camel_account_start_camel_operation_n (TnyCamelAccount *self, CamelOperatio
 
 	priv->inuse_spin = TRUE;
 
-	if (priv->cancel)
+	if (priv->cancel) {
 		_tny_camel_account_actual_uncancel (self);
+		camel_operation_unregister (priv->cancel);
+	}
 
 	priv->cancel = camel_operation_new (func, user_data);
 
-	camel_operation_ref (priv->cancel);
-	camel_operation_register (priv->cancel);
 	camel_operation_start (priv->cancel, (char*)what);
 
 	g_static_rec_mutex_unlock (priv->cancel_lock);
